Cleanup logic. Add rollImage endpoint
