# docs/swagger.json
@@ -6,7 +6,6 @@
     "paths": {
         "/roll": {
             "post": {
-                "description": "do ping",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,7 +23,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/newdice.RollRequest"
+                            "$ref": "#/definitions/dice.RollRequest"
                         }
                     }
                 ],
@@ -32,15 +31,61 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/newdice.RollResponse"
+                            "$ref": "#/definitions/dice.RollResponse"
                         }
                     }
                 }
             }
+        },
+        "/roll/{input}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "roll"
+                ],
+                "summary": "roll dice based on string input",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "input",
+                        "name": "input",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dice.RollResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/rollImage/{input}": {
+            "get": {
+                "tags": [
+                    "roll"
+                ],
+                "summary": "roll dice based on string input and return image",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "input",
+                        "name": "input",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
-        "newdice.DieRequest": {
+        "dice.DieRequest": {
             "type": "object",
             "properties": {
                 "count": {
@@ -49,15 +94,12 @@
                 "highest": {
                     "type": "integer"
                 },
-                "lowest": {
-                    "type": "integer"
-                },
                 "size": {
                     "type": "integer"
                 }
             }
         },
-        "newdice.DieResponse": {
+        "dice.DieResponse": {
             "type": "object",
             "properties": {
                 "count": {
@@ -67,15 +109,6 @@
                     "type": "integer"
                 },
                 "highest-kept": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "lowest": {
-                    "type": "integer"
-                },
-                "lowest-kept": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -94,6 +127,7 @@
                     "type": "integer"
                 },
                 "unkept": {
+                    "description": "LowestKept  []int `json:\"lowest-kept\"`",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -101,27 +135,27 @@
                 }
             }
         },
-        "newdice.RollRequest": {
+        "dice.RollRequest": {
             "type": "object",
             "properties": {
                 "dice": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/newdice.DieRequest"
+                        "$ref": "#/definitions/dice.DieRequest"
                     }
                 }
             }
         },
-        "newdice.RollResponse": {
+        "dice.RollResponse": {
             "type": "object",
             "properties": {
                 "dice": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/newdice.DieResponse"
+                        "$ref": "#/definitions/dice.DieResponse"
                     }
                 },
-                "error": {
+                "image": {
                     "type": "string"
                 },
                 "total": {
