# pkg/routes/routes.go
@@ -26,5 +26,6 @@ func AddRoutes(r *gin.Engine, c cache.CacheEngine) {
 	r.GET("/roll/:input", roll(c))
 	r.POST("/roll", rollJson(c))
 	r.GET("/image/:id", image(c))
+	r.GET("/rollImage/:input", rollImage(c))
 	// r.GET("/rollImage/:input", rollImage())
 }
